wip: create and login for employees
