# app/controllers/userController.js
@@ -1,3 +1,5 @@
+const bcrypt = require('bcrypt');
+const jwt = require('jsonwebtoken');
 const userSchema = require('../models/user');
 const { 
     BIOMETRIC_VALIDATION, 
@@ -6,14 +8,15 @@ const {
     APPROVED_STATUS_PENDING, 
     CREDIT_SCORE_VALIDATION_FRAUD,
     APPROVED_STATUS_APPROVED,
-    APPROVED_STATUS_REJECTED
+    APPROVED_STATUS_REJECTED,
+    USER_SEGMENT_EMPLOYEE,
+    USER_SEGMENT_CLIENT
 } = require('../helpers/constants');
 const { predictCreditScore } = require('../helpers/creditScoreHelper');
 
 const create = async (req, res, next) => {
     const user = userSchema({
         ...req.body,
-        // other uer params to add, parse password etc 
     });
     const { creditScore, fraudSituation } = predictCreditScore(req.body);
     user.creditScore = creditScore
@@ -27,9 +30,12 @@ const getUsers = async (req, res, next) =>
     userSchema.find({ 
         verified: BIOMETRIC_VALIDATION.filter(v => v != BIOMETRIC_VALIDATION_INVALID), 
         approved: APPROVED_STATUS_PENDING,
-        fraudSituation: CREDIT_SCORE_VALIDATION.filter(v => v != CREDIT_SCORE_VALIDATION_FRAUD)
+        fraudSituation: CREDIT_SCORE_VALIDATION.filter(v => v != CREDIT_SCORE_VALIDATION_FRAUD),
+        segment: USER_SEGMENT_CLIENT
     })
-    .then(data => res.status(200).send(data))
+    .then(data => {
+        console.log('4')
+        return res.status(200).send(data)})
     .catch(error => res.status(500).send({message: error.message}));
 
 const updateUser = async (req, res, next) => 
@@ -42,11 +48,40 @@ const updateUser = async (req, res, next) =>
     .then(data => res.status(200).send(data))
     .catch(error => res.status(error.status || 500).send({message: error.message}));
 
-const getUser = async (req, res, next) => {
-    return userSchema.findById(req.params.userId)
-        .then(data => res.status(200).send(data))
-        .catch(error => res.status(500).send({message: error.message}));
-}
-    
+const createEmployee = async (req, res, next) =>  
+    Promise.all(req.body.users.map(async currentUser => {
+        const user = userSchema({
+            ...currentUser,
+            password: await bcrypt.hash(currentUser.password, 10),
+            segment: USER_SEGMENT_EMPLOYEE,
+        });
+        return user.save();
+    }))
+    .then(users => res.status(201).send(users.map(usr => ({email: usr.email}))))
+    .catch(error => res.status(500).send({message: error.message}));
 
-module.exports = { create, getUsers, getUser, updateUser }
+
+const loginEmployee = async (req, res, next) => 
+    userSchema.findOne({ email: req.body.email, segment: USER_SEGMENT_EMPLOYEE })
+        .then(data => {
+            if(!data) {
+                return res.status(401).json({ error: 'Invalid login credentials.' });
+            }
+            const { email, password } = req.body;
+            const hashedPassword = data.password;
+            return bcrypt.compare(password, hashedPassword)
+                .then(passwordMatch => {
+                    if (!passwordMatch) {
+                        return res.status(401).json({ error: 'Invalid login credentials.' });
+                    }
+                    const token = jwt.sign(
+                        { email, password: hashedPassword }, 
+                        process.env.TOKEN_SECRET, 
+                        { expiresIn: '1h' }
+                    );
+                    res.status(200).send({email: data.email, token })
+                });
+        })
+        .catch(error => res.status(500).send({message: error.message}));
+
+module.exports = { create, getUsers, updateUser, createEmployee, loginEmployee }
